--- a/capolavoro/package.json
+++ b/capolavoro/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
